cmake_minimum_required(VERSION 3.15)
project(ThisSummer)

set(CMAKE_CXX_STANDARD 14)
add_executable(TASK_000 TASK_000.cpp)
add_executable(TASK_007 TASK_007.cpp)
add_executable(TASK_008 TASK_008.cpp)
add_executable(TASK_009 TASK_009.cpp)
add_executable(TASK_051 TASK_051.cpp)
add_executable(TASK_002 TASK_002.cpp)
add_executable(TASK_003 TASK_003.cpp)
add_executable(TASK_005 TASK_005.cpp)
add_executable(TASK_221 TASK_221.cpp)
add_executable(TASK_189 TASK_189.cpp)
add_executable(TASK_191 TASK_191.cpp)
add_executable(TASK_194 TASK_194.cpp)
add_executable(TASK_006 TASK_006.cpp)
add_executable(TASK_012 TASK_012.cpp)
add_executable(LinkedList LinkedList.cpp)
add_executable(TASK_010 TASK_010.cpp)
add_executable(TASK_011 TASK_011.cpp)
add_executable(TASK_011T TASK_011T.cpp)
add_executable(TASK_034 TASK_034.cpp)
add_executable(TASK_024 TASK_024.cpp)
add_executable(TASK_025 TASK_025.cpp)
add_executable(TASK_028 TASK_028.cpp)
add_executable(TASK_035 TASK_035.cpp)
add_executable(TASK_036 TASK_036.cpp)